WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226874
getDisplayMedia API doesn't work
https://bugs.webkit.org/show_bug.cgi?id=226874
Summary
getDisplayMedia API doesn't work
olena.bezkrovna
Reported
2021-06-10 05:12:41 PDT
Created
attachment 431063
[details]
black video instead of share 1. Go to sample
https://webrtc.github.io/samples/src/content/getusermedia/getdisplaymedia/
2. Click Start and Allow the site to observe the screen 3. Observe the page Actual result: Black video, no errors in the console Expected result: Screen share should be displayed
Attachments
black video instead of share
(56.22 KB, image/png)
2021-06-10 05:12 PDT
,
olena.bezkrovna
no flags
Details
Patch
(3.91 KB, patch)
2021-06-10 05:50 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-06-10 05:18:19 PDT
<
rdar://problem/79134041
>
youenn fablet
Comment 2
2021-06-10 05:20:27 PDT
Thanks Olena, I reproduced this issue on STP as well WebKit ToT.
youenn fablet
Comment 3
2021-06-10 05:37:04 PDT
Issue is due to frame rate decimation.
youenn fablet
Comment 4
2021-06-10 05:50:23 PDT
Created
attachment 431065
[details]
Patch
EWS
Comment 5
2021-06-11 10:25:49 PDT
Committed
r278764
(
238724@main
): <
https://commits.webkit.org/238724@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 431065
[details]
.
youenn fablet
Comment 6
2021-07-06 02:13:30 PDT
***
Bug 227479
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug