getDisplayMedia API doesn't work https://bugs.webkit.org/show_bug.cgi?id=226874 <rdar://problem/79134041>

Reviewed by Eric Carlson.

Source/WebCore:

Test: fast/mediastream/getDisplayMedia-frame-rate.html

* platform/mediastream/RealtimeVideoSource.cpp:
(WebCore::RealtimeVideoSource::videoSampleAvailable):
Only apply decimation in case frame rate is set.

LayoutTests:

* fast/mediastream/getDisplayMedia-frame-rate-expected.txt: Added.
* fast/mediastream/getDisplayMedia-frame-rate.html: Added.


Canonical link: https://commits.webkit.org/238724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278764 268f45cc-cd09-0410-ab3c-d52691b4dbfc