Source/WebCore/platform/mediastream/RealtimeVideoSource.cpp
@@ -183,7 +183,8 @@ void RealtimeVideoSource::videoSampleAvailable(MediaSample& sample)
     if (m_frameDecimation > 1 && ++m_frameDecimationCounter % m_frameDecimation)
         return;
 
-    m_frameDecimation = static_cast<size_t>(m_source->observedFrameRate() / frameRate());
+    auto frameRate = this->frameRate();
+    m_frameDecimation = frameRate ? static_cast<size_t>(m_source->observedFrameRate() / frameRate) : 1;
     if (!m_frameDecimation)
         m_frameDecimation = 1;
 
